wip: general application
added a settings license page, currently a placeholder.
added gear, invalid and template icons for use on the settings dialog.
added functions to MacHelper to handle path conversions, resolving ~ and providing canonical paths from ~
Builder now resolves paths relative to the configuration file.
Added recent files menu.
File menu options now working.
Added NSAlert message box function to MacHelper, uses native macOS alert panels as the Qt native message panel does not look good in Big Sur.
Added .dmgee file extension to Info.plist.in 
contributing.md modified to include information on typing and casting.

--- a/src/app.qrc
+++ b/src/app.qrc
@@ -25,6 +25,10 @@
         <file>../icons/build.png</file>
         <file>../icons/build@2x.png</file>
 
+        <file>../icons/template.png</file>
+        <file>../icons/gear.png</file>
+        <file>../icons/invalid.png</file>
+
         <file>../images/spinner-dark.gif</file>
         <file>../images/spinner-light.gif</file>
         <file>../images/loading.gif</file>
