wip: licence preferences
licence page is now mostly functional.
OutlineView is now rendering correctly and handles mouse button presses on the buttons.
added BulletWIdget which provides a coloured dot next to text and is used on the licences page.
uses rules.yaml from choosealicence.com to provide tooltip information.

--- a/src/app.qrc
+++ b/src/app.qrc
@@ -37,5 +37,11 @@
         <file>../icons/copy-light@2x.png</file>
         <file>../icons/trash-dark@2x.png</file>
         <file>../icons/trash-light@2x.png</file>
+
+        <file>../icons/red-dot@2x.png</file>
+        <file>../icons/green-dot@2x.png</file>
+        <file>../icons/blue-dot@2x.png</file>
+
+        <file>../licences/rules.yaml</file>
     </qresource>
 </RCC>
