--- a/src/app.qrc
+++ b/src/app.qrc
@@ -14,6 +14,13 @@
         <file>../fonts/Open_Sans/OpenSans-SemiBold.ttf</file>
         <file>../fonts/Open_Sans/OpenSans-SemiBoldItalic.ttf</file>
 
+        <file>../fonts/FiraCode/FiraCode-Bold.ttf</file>
+        <file>../fonts/FiraCode/FiraCode-Light.ttf</file>
+        <file>../fonts/FiraCode/FiraCode-Medium.ttf</file>
+        <file>../fonts/FiraCode/FiraCode-Regular.ttf</file>
+        <file>../fonts/FiraCode/FiraCode-Retina.ttf</file>
+        <file>../fonts/FiraCode/FiraCode-SemiBold.ttf</file>
+
         <file>../icons/target.png</file>
 
         <file>../icons/save.png</file>
