--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>dmge²</string>
   </property>
-  <widget class="QWidget" name="centralwidget">
+  <widget class="QWidget" name="mainWidget">
    <layout class="QGridLayout" name="gridLayout_6">
     <property name="leftMargin">
      <number>0</number>
@@ -128,7 +128,7 @@
          </widget>
         </item>
         <item>
-         <spacer name="horizontalSpacer_6">
+         <spacer name="homeSpacer">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
@@ -591,7 +591,7 @@
             <number>6</number>
            </property>
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_3">
+            <layout class="QHBoxLayout" name="gridSizeLayout">
              <property name="sizeConstraint">
               <enum>QLayout::SetMinimumSize</enum>
              </property>
@@ -694,7 +694,7 @@
             </widget>
            </item>
            <item>
-            <spacer name="verticalSpacer_2">
+            <spacer name="gridSpacer">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
@@ -775,7 +775,7 @@
             <number>0</number>
            </property>
            <item>
-            <layout class="QHBoxLayout" name="horizontalLayout_5">
+            <layout class="QHBoxLayout" name="buildLayout">
              <item>
               <widget class="Nedrysoft::Ribbon::RibbonPushButton" name="buildButton">
                <property name="sizePolicy">
@@ -869,7 +869,7 @@
             </spacer>
            </item>
            <item row="0" column="0">
-            <layout class="QFormLayout" name="formLayout">
+            <layout class="QFormLayout" name="optionsLayout">
              <property name="sizeConstraint">
               <enum>QLayout::SetMaximumSize</enum>
              </property>
@@ -945,7 +945,7 @@
               </widget>
              </item>
              <item row="2" column="1">
-              <layout class="QHBoxLayout" name="horizontalLayout_4">
+              <layout class="QHBoxLayout" name="outputLayout">
                <property name="spacing">
                 <number>2</number>
                </property>
@@ -983,7 +983,7 @@
          </widget>
         </item>
         <item>
-         <widget class="Nedrysoft::Ribbon::RibbonGroup" name="ribbonGroup">
+         <widget class="Nedrysoft::Ribbon::RibbonGroup" name="licenseGroup">
           <property name="minimumSize">
            <size>
             <width>0</width>
@@ -1016,7 +1016,7 @@
             <number>0</number>
            </property>
            <item>
-            <layout class="QFormLayout" name="formLayout_2">
+            <layout class="QFormLayout" name="licenceLayout">
              <property name="fieldGrowthPolicy">
               <enum>QFormLayout::ExpandingFieldsGrow</enum>
              </property>
@@ -1031,7 +1031,7 @@
               </widget>
              </item>
              <item row="0" column="1">
-              <widget class="Nedrysoft::Ribbon::RibbonComboBox" name="ribbonComboBox">
+              <widget class="Nedrysoft::Ribbon::RibbonComboBox" name="licenceComboBox">
                <property name="sizePolicy">
                 <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
                  <horstretch>0</horstretch>
@@ -1047,7 +1047,7 @@
               </widget>
              </item>
              <item row="1" column="1">
-              <widget class="Nedrysoft::Ribbon::RibbonCheckBox" name="ribbonCheckBox">
+              <widget class="Nedrysoft::Ribbon::RibbonCheckBox" name="showLicenceCheckbox">
                <property name="text">
                 <string>Show Licence</string>
                </property>
@@ -1059,7 +1059,7 @@
             </layout>
            </item>
            <item>
-            <spacer name="verticalSpacer_4">
+            <spacer name="licenceSpacer">
              <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
@@ -1075,7 +1075,73 @@
          </widget>
         </item>
         <item>
-         <spacer name="horizontalSpacer">
+         <widget class="Nedrysoft::Ribbon::RibbonGroup" name="variablesGroup">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>0</height>
+           </size>
+          </property>
+          <property name="groupName">
+           <string>Variables</string>
+          </property>
+          <layout class="QHBoxLayout" name="horizontalLayout_3">
+           <property name="spacing">
+            <number>6</number>
+           </property>
+           <property name="leftMargin">
+            <number>0</number>
+           </property>
+           <property name="topMargin">
+            <number>0</number>
+           </property>
+           <property name="rightMargin">
+            <number>0</number>
+           </property>
+           <item>
+            <widget class="Nedrysoft::Ribbon::RibbonPushButton" name="newVariablePushButton">
+             <property name="icon">
+              <iconset resource="app.qrc">
+               <normaloff>:/icons/variable-new.png</normaloff>:/icons/variable-new.png</iconset>
+             </property>
+             <property name="text">
+              <string>New</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="Nedrysoft::Ribbon::RibbonPushButton" name="ribbonPushButton">
+             <property name="icon">
+              <iconset resource="app.qrc">
+               <normaloff>:/icons/variable-edit.png</normaloff>:/icons/variable-edit.png</iconset>
+             </property>
+             <property name="text">
+              <string>Edit</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="Nedrysoft::Ribbon::RibbonPushButton" name="deleteVariablePushButton">
+             <property name="icon">
+              <iconset resource="app.qrc">
+               <normaloff>:/icons/variable-add.png</normaloff>:/icons/variable-add.png</iconset>
+             </property>
+             <property name="text">
+              <string>Delete</string>
+             </property>
+            </widget>
+           </item>
+          </layout>
+         </widget>
+        </item>
+        <item>
+         <spacer name="mainRibbonSpacer">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
           </property>
@@ -1095,7 +1161,7 @@
      </widget>
     </item>
     <item row="1" column="0">
-     <widget class="QSplitter" name="splitter">
+     <widget class="QSplitter" name="mainSplitter">
       <property name="styleSheet">
        <string notr="true">background:black;</string>
       </property>
@@ -1103,7 +1169,7 @@
        <enum>Qt::Vertical</enum>
       </property>
       <widget class="QWidget" name="gridLayoutWidget">
-       <layout class="QGridLayout" name="gridLayout_10">
+       <layout class="QGridLayout" name="previewLayout">
         <property name="topMargin">
          <number>12</number>
         </property>
@@ -1125,7 +1191,7 @@
         </item>
        </layout>
       </widget>
-      <widget class="Nedrysoft::FlatTabWidget" name="tabWidget">
+      <widget class="Nedrysoft::FlatTabWidget" name="mainTabWidget">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="MinimumExpanding">
          <horstretch>0</horstretch>
@@ -1168,7 +1234,7 @@
           <number>0</number>
          </property>
          <item row="0" column="0">
-          <widget class="QStackedWidget" name="stackedWidget">
+          <widget class="QStackedWidget" name="consoleStackedWidget">
            <property name="currentIndex">
             <number>1</number>
            </property>
@@ -1238,7 +1304,7 @@
               </widget>
              </item>
              <item row="0" column="0">
-              <spacer name="verticalSpacer">
+              <spacer name="topLoadingSpacer">
                <property name="orientation">
                 <enum>Qt::Vertical</enum>
                </property>
@@ -1251,7 +1317,7 @@
               </spacer>
              </item>
              <item row="3" column="0">
-              <spacer name="verticalSpacer_3">
+              <spacer name="bottomLoadingSpacer">
                <property name="orientation">
                 <enum>Qt::Vertical</enum>
                </property>
