--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -1025,6 +1025,12 @@
              </property>
              <item row="0" column="0">
               <widget class="QLabel" name="licenceLabel">
+               <property name="sizePolicy">
+                <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+                 <horstretch>0</horstretch>
+                 <verstretch>0</verstretch>
+                </sizepolicy>
+               </property>
                <property name="text">
                 <string>Licence:</string>
                </property>
@@ -1033,7 +1039,7 @@
              <item row="0" column="1">
               <widget class="Nedrysoft::Ribbon::RibbonComboBox" name="licenceComboBox">
                <property name="sizePolicy">
-                <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+                <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                  <horstretch>0</horstretch>
                  <verstretch>0</verstretch>
                 </sizepolicy>
@@ -1130,7 +1136,7 @@
             <widget class="Nedrysoft::Ribbon::RibbonPushButton" name="deleteVariablePushButton">
              <property name="icon">
               <iconset resource="app.qrc">
-               <normaloff>:/icons/variable-add.png</normaloff>:/icons/variable-add.png</iconset>
+               <normaloff>:/icons/variable-delete.png</normaloff>:/icons/variable-delete.png</iconset>
              </property>
              <property name="text">
               <string>Delete</string>
